--- a/Instagram-Login/instalogin.html
+++ b/Instagram-Login/instalogin.html
@@ -4,169 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login ● Instagram</title>
-    <link type="image/png" sizes="16x16" rel="icon" href="../Instagram-Login/Instaimg/iconinstagram.webp">
+    <link type="image/png" sizes="16x16" rel="icon" href="/Instagram-Login/Instaimg/iconinstagram.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-
-        html{
-            height: 100%;
-        }
-
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            width: 100%;
-            font-size: 100%;
-        }
-
-        .container{
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 90vh;
-        }
-
-        .logintop{
-            margin: 0 auto;
-        }
-
-        .login{
-            padding: 20px;
-            border: 1px solid rgb(215, 206, 206);
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        h1 img{
-            margin: 0;
-            height: 90px;
-        }
-
-        input{
-            width: 80%;
-            padding: 9px 0px 7px 8px; 
-            margin: 10px 0px;
-        }
-
-
-        .loginbtn{
-            background-color: blueviolet;
-            color: white;
-            border: 0;
-            border-radius: 10px;
-            cursor: pointer;
-        }
-
-        .orline{
-            display: flex;
-            font-size: 20px;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .facebook{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-
-        .face{
-            margin: 10px 10px 0px 0px;
-            padding: 0;
-            width: 20px;
-            height: 30px;
-            
-        }
-
-        .facebook a{
-            color: #385185;
-            font-weight:bold;
-        }
-
-        .link{
-            text-decoration: none;
-        }
-
-        .signup{
-            margin-top: 20px;
-            padding: 20px;
-            border: 1px solid rgb(215, 206, 206);
-            text-align: center;
-            border-radius: 10px;
-        }
-
-        .apps{
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .play{
-            height: 45px;  
-        }
-
-        img{
-            width: 130px;
-            height: 50px;
-            margin: 10px;
-        }
-
-        .color{
-            color: rgb(144, 126, 126);
-            margin: 0px 5px;
-        }
-
-        footer{
-            left: 0;
-            right: 0;
-            bottom: 0;
-            text-align: center;
-            margin: 20px 0px;
-            font-size: 15px;
-            position: absolute;
-        }
-
-        .copy{
-            display: flex;
-            justify-content: center;
-            margin: 20px;
-        }
-
-        .copy p{
-            margin-left: 20px;
-            color: rgb(144, 126, 126);
-            text-wrap: nowrap;
-        }
-
-        @media only screen and (max-height:700px){
-            footer{
-                position: relative;
-            }
-            .container{
-                height: 100vh;
-            }
-
-        }
-
-        @media only screen and (max-width:360px){
-            .login, .signup{
-                border: 0;
-            }
-        }
-        
-
-    </style>
+    <link rel="stylesheet" href="/Instagram-Login/instalogin.css">
 </head>
 <body>
     <div class="container">
         <div class="logintop">
             <div class="login">
-                    <h1><img src="/Instagram-clone/Instagram-Login/Instaimg/instagram.png" alt=""></h1>
+                    <h1><img src="/Instagram-Login/Instaimg/instagram.png" alt=""></h1>
                     <input type="text" placeholder="Phone number, username or email"><br>
                     <input type="password" placeholder="Password"><br>
                     <input class="loginbtn" type="submit" value="Log in">
